fixed the overflow bug

--- a/src/components/atoms/HoverHelp/HoverHelp.module.scss
+++ b/src/components/atoms/HoverHelp/HoverHelp.module.scss
@@ -1,21 +1,25 @@
 .container {
-    .icon {
-        font-size: 25px;
-        color: var(--color-txt-4);
-    }
-    .message {
-        z-index: 10;
-        padding: 5px 5px;
-        border-radius: 3px;
-        opacity: 0;
-        background-color: var(--color-info);
-        color: var(--color-dark);
-        transition: opacity .3s;
-        pointer-events: none;
-    }
-    &:hover {
-        .message {
-            opacity: 1;
-        }
-    }
+
+	.icon {
+		font-size: 25px;
+		color: var(--color-txt-4);
+	}
+
+	.message {
+		position: absolute;
+		padding: 5px 5px;
+		border-radius: 3px;
+		background-color: var(--color-info);
+		color: var(--color-dark);
+		opacity: 0;
+		transition: opacity .3s;
+		pointer-events: none;
+		z-index: 10;
+	}
+
+	&:hover {
+		.message {
+			opacity: 1;
+		}
+	}
 }
